add color to links and change url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <hr width=50%>
       <h2 class="main"><em><u>ABOUT ME</u></em></h2>
       <p>Maria Daniella is a Software engineer who lives in Nairobi, Kenya with fluency in all programming languages. When she's not working with clients, she enjoys reading, travelling and learning new things. </p>
-      <a href ="https://github.com/Maria-Daniella/my-portfolio">https://maria-daniella.github.io</a>
+      <a href ="https://Maria-Daniella.github.io/my-portfolio" target="_blank">View on Github</a>
       <h3><u>Why I decided to take a class on programming</u></h3>
       <p>Programming has become an essential tool that has become more of a necessity. As the world is evolving technology has become the way of the future. i decided to take a class on programming so as to venture into the field of programming and become a part of this evolution</p>
       <hr width=50%>
