change background property

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <div class="intro">
       <h1><strong>MARIA DANIELLA</strong></h1><br>
-      <span><img src="image.jpg" alt="a photo of me taking in the beauty of life" width="30%" length="50px" class= "image"></span>
+      <span><img src="images/image.jpg" alt="a photo of me taking in the beauty of life" width="30%" length="50px" class= "image"></span>
       <hr width=50%>
       <h2 class="main"><em><u>ABOUT ME</u></em></h2>
       <p>Maria Daniella is a Software engineer who lives in Nairobi, Kenya with fluency in all programming languages. When she's not working with clients, she enjoys reading, travelling and learning new things. </p>
@@ -19,8 +19,8 @@
     </div>
     <div class="links">
 
-    <a href="https://www.instagram.com/?hl=en"><img src="instagram.jpg" alt="Instagram"></a>&&&
-    <a href="https://ke.linkedin.com/"><img src="linkedin.jpg" alt="Linkedin"></a>
+    <a href="https://www.instagram.com/?hl=en"><img src="images/instagram.jpg" alt="Instagram"></a>&nbsp;
+    <a href="https://ke.linkedin.com/"><img src="images/linkedin.jpg" alt="Linkedin"></a>
     </div>
 
     <div class="section">
