add media type to styles.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="https://ke.linkedin.com/"><img src="images/linkedin.jpg" alt="Linkedin"></a>
     </div>
 
-    <div class="section">
+    <div class="column1">
 
       <h3><u>EDUCATION</u></h3>
 
@@ -38,6 +38,8 @@
 
     </div>
 
+<div class="column2">
+
 
 
     <h2>Here are links to some of the projects I have created</h2>
@@ -50,8 +52,6 @@
       This project resume is written using html and css. it is a brief description of my capabilities as a programer as well as my education experience and skills<br></li>
     </ul>
 
-
-    <p></p>
-    </ul>
+</div>
   </body>
 </html>
