add color to date tags and hyperlinks in index.html and styles.css.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <h3><u>EDUCATION</u></h3>
 
       <p> <span><h4>University</h4>BSc computer Science</span><br>Catholic University of
-        Eastern Africa <br> <span class = "date"> 01/2017 </span></p>
+        Eastern Africa <br> <span class = "date"><em>01/2017<em></span></p>
       <p> <span><h3>Highschool</h3> Nyahururu Elite Senior School</span></p>
-    <span class="date"> 02/2014 - 08/2016</span></p>
+    <span class="date"><em> 02/2014 - 08/2016<em></span></p>
     <p> <span><h3>Primary</h3> Moi Educational Center</span></p>
-  <span class="date"> 02/2014 - 08/2016</span></p>
+  <span class="date"><em>02/2014 - 08/2016<em></span></p>
 
 
 
