add punctuation to contact information

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <div class="intro">
       <h1><strong>MARIA DANIELLA</strong></h1><br>
-      <span><img src="images/image.jpg" alt="a photo of me taking in the beauty of life" width="30%" length="50px" class= "image"></span>
+      <span><img src="images/image.jpg" alt="a photo of me" width="30%" length="50px" class= "image"></span>
       <hr width=50%>
       <h2 class="main"><em><u>ABOUT ME</u></em></h2>
       <p>Maria Daniella is a Software engineer who lives in Nairobi, Kenya with fluency in all programming languages. When she's not working with clients, she enjoys reading, travelling and learning new things. </p>
@@ -28,12 +28,37 @@
       <h3><u>EDUCATION</u></h3>
 
       <p> <span><h4>University</h4>BSc computer Science</span><br>Catholic University of
-      <footer>Contact Information
+        Eastern Africa <br> <span class = "date"><em>01/2017<em></span></p>
+      <p> <span><h3>Highschool</h3> Nyahururu Elite Senior School</span></p>
+    <span class="date"><em> 02/2014 - 08/2016<em></span></p>
+    <p> <span><h3>Primary</h3> Moi Educational Center</span></p>
+  <span class="date"><em>02/2014 - 08/2016<em></span></p>
 
-        Telephone: 0795450115
-        email:mariadanigikonyo@gmail.com
-        Address:45814-00100, Nairobi.
 
-      </footer>
+
+    </div>
+
+<div class="column2">
+
+
+
+    <h2>Here are links to some of the projects I have created</h2>
+    <ul>
+      <li><a href="https://maria-daniella.github.io/island-resort">Island Resort</a><br> This is a project based on an island resort. I applied both css and html to make this website come life<br></li>
+      <li><a href="https://maria-daniella.github.io/travel-agency"> Travel Agency</a><br>
+      This project entails both css and html. Its a website for a travel agency and has featured some of their accomodation suites as well as some of the activities offered.<br></li>
+      <li><a href="https://maria-daniella.github.io/my-first-website">My First website</a><br> This is one of the first websites I ever created. it features my favourite things as well as my pet's very own website.<br></li>
+      <li><a href="https://maria-daniella.github.io/Resume/">My Resume</a><br></li>
+      This project resume is written using html and css. it is a brief description of my capabilities as a programer as well as my education experience and skills<br></li>
+    </ul>
+
+</div>
+<footer>
+
+<h1>Contact Information</h1>
+  Telephone:0795450115
+  email:mariadanigikonyo@gmail.com
+  Address: 45814 - 00100
+</footer>
 </body>
 </html>
