add break lines to Contact informstion in index.html

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 <footer>
 
 <h1>Contact Information</h1>
-  Telephone:0795450115
-  email:mariadanigikonyo@gmail.com
-  Address: 45814 - 00100
+  Telephone:0795450115<br>
+  email:mariadanigikonyo@gmail.com<br>
+  Address: 45814 - 00100, Nairobi <br>
 </footer>
 </body>
 </html>
