add inline elements to contact information in index.html.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <footer>
 
-<h1>Contact Information</h1>
+<h1><u>Contact Information</u></h1>
   Telephone:0795450115<br>
   email:mariadanigikonyo@gmail.com<br>
   Address: 45814 - 00100, Nairobi <br>
