add copyright and license information to footer

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
   Telephone:0795450115<br>
   email:mariadanigikonyo@gmail.com<br>
   Address: 45814 - 00100, Nairobi <br>
+  <br>
+  MIT License Copyright (c) 2018 Moringa Highschool
+  <br>
 </footer>
 </body>
 </html>
