add section on skills

--- a/index.html
+++ b/index.html
@@ -34,13 +34,9 @@
     <p> <span><h3>Primary</h3> Moi Educational Center</span></p>
   <span class="date"><em>02/2014 - 08/2016<em></span></p>
 
-
-
     </div>
 
 <div class="column2">
-
-
 
     <h2>Here are links to some of the projects I have created</h2>
     <ul>
@@ -52,6 +48,17 @@
       This project resume is written using html and css. it is a brief description of my capabilities as a programer as well as my education experience and skills<br></li>
     </ul>
 
+</div>
+<div class="Skills">
+  <ul>
+        <li>Programming</li>
+        <li>Data Science</li>
+        <li>Teamwork</li>
+        <li>Problem solving</li>
+        <li>Decision Making</li>
+        <li>Public Speaking</li>
+        <li>Artificial intelligence</li>
+  </ul>
 </div>
 <footer>
 
