float section on skills to the right of educationn section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
     <a href="https://www.instagram.com/?hl=en"><img src="images/instagram.jpg" alt="Instagram"></a>&nbsp;
     <a href="https://ke.linkedin.com/"><img src="images/linkedin.jpg" alt="Linkedin"></a>
     </div>
-
+    <div class="skills">
+      <h2><u>Skills</u></h2>
+      <ul>
+            <li>Programming</li>
+            <li>Data Science</li>
+            <li>Teamwork</li>
+            <li>Problem solving</li>
+            <li>Decision Making</li>
+            <li>Public Speaking</li>
+            <li>Artificial intelligence</li>
+      </ul>
+    </div>
     <div class="column1">
 
       <h3><u>EDUCATION</u></h3>
@@ -49,17 +60,7 @@
     </ul>
 
 </div>
-<div class="Skills">
-  <ul>
-        <li>Programming</li>
-        <li>Data Science</li>
-        <li>Teamwork</li>
-        <li>Problem solving</li>
-        <li>Decision Making</li>
-        <li>Public Speaking</li>
-        <li>Artificial intelligence</li>
-  </ul>
-</div>
+
 <footer>
 
 <h1><u>Contact Information</u></h1>
