--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       </ul>
     </div>
     <div class="column1">
-      <h3><u>EDUCATION</u></h3>
+      <h3><u><em>EDUCATION</em></u></h3>
       <p> <span><h4>University</h4>BSc computer Science</span><br>Catholic University of
         Eastern Africa <br> <span class = "date"><em>01/2017<em></span></p>
-      <p> <span><h3>Highschool</h3> Nyahururu Elite Senior School</span></p>
+      <p> <span><h3><em>Highschool</em></h3> Nyahururu Elite Senior School</span></p>
       <span class="date"><em> 02/2014 - 08/2016<em></span></p>
-      <p> <span><h3>Primary</h3> Moi Educational Center</span></p>
+      <p> <span><h3><em>Primary</em>S</h3> Moi Educational Center</span></p>
       <span class="date"><em>02/2014 - 08/2016<em></span></p>
     </div>
     <div class="column2">
